[gd_scene format=3 uid="uid://b82kauwohbvun"]

[ext_resource type="Script" uid="uid://mmu44ppqby8v" path="res://scripts/GameManager.gd" id="1_5lrye"]
[ext_resource type="PackedScene" uid="uid://c0cerfjhi148m" path="res://scenes/entity_manager.tscn" id="3_iprcq"]
[ext_resource type="PackedScene" uid="uid://dswe4b60aebu5" path="res://scenes/ui/battle_menus/battle_entity_info.tscn" id="4_riktp"]
[ext_resource type="AudioStream" uid="uid://bymhdcicx5ap3" path="res://assets/audio/homemade/SFX/Woosh.mp3" id="5_7rg7d"]
[ext_resource type="PackedScene" uid="uid://f0gydn2c2inx" path="res://scenes/ui/tungesten_counter.tscn" id="5_a1osm"]
[ext_resource type="Script" uid="uid://cc20vrfd222y3" path="res://scripts/pasive_abilities/PassiveManager.gd" id="6_limtx"]
[ext_resource type="PackedScene" uid="uid://db5536f40fftj" path="res://scenes/ui/battle_menus/battle_menu.tscn" id="7_xmnyv"]
[ext_resource type="PackedScene" uid="uid://d4f0gy2sw12hv" path="res://scenes/ui/battle_menus/end_screen.tscn" id="9_s08fr"]

[sub_resource type="Animation" id="Animation_3mlxk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/EndScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(448, 14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/EndScreen:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/EndScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/TurnLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1188, 80)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/TurnLabel:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["BATTLE_YOUR_TURN"]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/TurnLabel/AudioStreamPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/TurnLabel/AudioStreamPlayer:pitch_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.56]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/TurnLabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_limtx"]
resource_name = "end_player_turn"
length = 1.6
step = 0.0538
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TurnLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.21052632, 0.68421054, 1.2631578, 1.5789474),
"transitions": PackedFloat32Array(0.3535533, 0.3186403, 3.8637445, 1.6245056, 2),
"update": 0,
"values": [Vector2(258.998, -30), Vector2(258.998, 60), Vector2(258.998, 50), Vector2(258.998, 60), Vector2(258.998, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TurnLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["BATTLE_ENEMY_TURN"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/TurnLabel/AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2631578),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/TurnLabel/AudioStreamPlayer:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.3157895),
"transitions": PackedFloat32Array(1, 0.8705506),
"update": 0,
"values": [0.36, 0.26]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/TurnLabel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2631579, 1.2105263, 1.5789474),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.82, 0.82, 0), Color(1, 0.81960785, 0.81960785, 1), Color(1, 0.81960785, 0.81960785, 1), Color(1, 0.82, 0.82, 0)]
}

[sub_resource type="Animation" id="Animation_yj4cw"]
resource_name = "show_end_screen"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/EndScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(600, 43), Vector2(600, 130)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/EndScreen:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/EndScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_puse5"]
resource_name = "start_player_turn"
length = 1.6
step = 0.0538
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TurnLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.21052632, 0.68421054, 1.3684211, 1.5789474),
"transitions": PackedFloat32Array(0.3535533, 0.3186403, 3.8637445, 1.4640862, 2),
"update": 0,
"values": [Vector2(258.998, -30), Vector2(258.998, 60), Vector2(258.998, 50), Vector2(258.998, 60), Vector2(258.998, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TurnLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["BATTLE_YOUR_TURN"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/TurnLabel/AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2631578),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/TurnLabel/AudioStreamPlayer:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.3157895),
"transitions": PackedFloat32Array(1, 0.8705506),
"update": 0,
"values": [0.36, 0.26]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/TurnLabel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2631579, 1.2105263, 1.5263158),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.77, 1, 1, 0), Color(0.77, 1, 1, 1), Color(0.76862746, 1, 1, 1), Color(0.77, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsa6o"]
_data = {
&"RESET": SubResource("Animation_3mlxk"),
&"end_player_turn": SubResource("Animation_limtx"),
&"show_end_screen": SubResource("Animation_yj4cw"),
&"start_player_turn": SubResource("Animation_puse5")
}

[sub_resource type="InputEventKey" id="InputEventKey_fvtbi"]
device = -1
keycode = 75
unicode = 107

[sub_resource type="Shortcut" id="Shortcut_di83f"]
events = [SubResource("InputEventKey_fvtbi")]

[sub_resource type="Animation" id="Animation_xmnyv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7rg7d"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [-0.03490658503988659, 0.03490658503988659]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmnyv"]
_data = {
&"RESET": SubResource("Animation_xmnyv"),
&"new_animation": SubResource("Animation_7rg7d")
}

[node name="Game" type="Node2D" unique_id=268961466]
texture_filter = 1
script = ExtResource("1_5lrye")
xp_reward = 50

[node name="Background" type="Node2D" parent="." unique_id=1258881707]
position = Vector2(0, -50)

[node name="Entity_manager" parent="." unique_id=2063756186 instance=ExtResource("3_iprcq")]
partyRect = Rect2(100, 150, 450, 300)
foesRect = Rect2(600, 150, 450, 300)

[node name="VFXs" type="Node2D" parent="." unique_id=1613646163]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1657765838]
libraries/ = SubResource("AnimationLibrary_xsa6o")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1469035995]

[node name="EndTurnButton" type="Button" parent="CanvasLayer" unique_id=1286631439]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -51.0
offset_right = 118.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
shortcut = SubResource("Shortcut_di83f")
text = "BATTLE_NEXT_TURN_BUTTON"

[node name="InstructionLabel" type="Label" parent="CanvasLayer" unique_id=620155685]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 73.0
grow_horizontal = 2
pivot_offset = Vector2(90, 17)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/InstructionLabel" unique_id=1674787028]
libraries/ = SubResource("AnimationLibrary_xmnyv")
autoplay = &"new_animation"

[node name="Return" type="Button" parent="CanvasLayer" unique_id=1005859045]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.1
anchor_bottom = 0.01
offset_right = -0.416016
offset_bottom = -0.104
text = "LEVEL_SELECT_RETURN_TO_MENU"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer" unique_id=929706262]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/separation = -5

[node name="CharacterInfoPanel" parent="CanvasLayer/HBoxContainer" unique_id=820475760 instance=ExtResource("4_riktp")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer" unique_id=1237777596]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/PanelContainer" unique_id=881134667]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/MarginContainer" unique_id=402156947]
layout_mode = 2
alignment = 1

[node name="EndTurnButton" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=997879671]
unique_name_in_owner = true
layout_mode = 2
text = "BATTLE_NEXT_TURN_BUTTON"
autowrap_mode = 1

[node name="MenuButton" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1636258580]
unique_name_in_owner = true
layout_mode = 2
text = "menu"

[node name="TargetInfoPanel" parent="CanvasLayer/HBoxContainer" unique_id=638297163 instance=ExtResource("4_riktp")]
unique_name_in_owner = true
layout_mode = 2

[node name="EndScreen" parent="CanvasLayer" unique_id=1985365237 node_paths=PackedStringArray("game_manager") instance=ExtResource("9_s08fr")]
unique_name_in_owner = true
visible = false
offset_left = -128.0
offset_top = 14.0
offset_right = -88.0
offset_bottom = 54.0
game_manager = NodePath("../..")

[node name="TurnLabel" type="Label" parent="CanvasLayer" unique_id=1825837466]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 612.0
offset_top = 80.0
offset_right = 1246.0037
offset_bottom = 168.00125
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.78, 0.78, 0.78, 0.28235295)
theme_override_colors/font_outline_color = Color(0.2, 0.013333333, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 32
text = "BATTLE_YOUR_TURN"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/TurnLabel" unique_id=904151750]
stream = ExtResource("5_7rg7d")
volume_db = -8.0
pitch_scale = 0.56
bus = &"SFX"

[node name="Tungesten_counter" parent="CanvasLayer" unique_id=1333209353 instance=ExtResource("5_a1osm")]
unique_name_in_owner = true
offset_left = 459.0
offset_top = -294.0
offset_right = 459.0
offset_bottom = -294.0

[node name="Battle Menu" parent="CanvasLayer" unique_id=332062431 instance=ExtResource("7_xmnyv")]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PassiveManager" type="Node" parent="." unique_id=2133441339]
script = ExtResource("6_limtx")

[connection signal="pressed" from="CanvasLayer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
